--- a/airline_delay.ipynb
+++ b/airline_delay.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "ruta = r'C:\\Estudio\\programeo\\IA\\BigDataOpt\\Airlines.csv'\n",
+    "ruta = r'C:\\Users\\MIS\\Desktop\\Estudio\\4\\RNA\\archive(1)\\Airlines.csv'\n",
     "\n",
     "df = spark.read.csv(ruta, header=True, inferSchema=True)\n",
     "\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "539383"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "93"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "299119"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -497,6 +497,182 @@
     "\n",
     "# Mostrar la gráfica\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Airline 0\n",
+      "Flight 0\n",
+      "AirportFrom 0\n",
+      "AirportTo 0\n",
+      "DayOfWeek 0\n",
+      "Time 0\n",
+      "Length 0\n",
+      "Delay 0\n",
+      "Length Scaled 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in df_new.columns:\n",
+    "    print(f\"{col} {df_new.filter(df_new[col].isNull()).count()}\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distinct_counts = {var: df_new.select('AirportTo').distinct().count() for var in df_new.columns}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable 'Airline' tiene 293 valores distintos.\n",
+      "Variable 'Flight' tiene 293 valores distintos.\n",
+      "Variable 'AirportFrom' tiene 293 valores distintos.\n",
+      "Variable 'AirportTo' tiene 293 valores distintos.\n",
+      "Variable 'DayOfWeek' tiene 293 valores distintos.\n",
+      "Variable 'Time' tiene 293 valores distintos.\n",
+      "Variable 'Length' tiene 293 valores distintos.\n",
+      "Variable 'Delay' tiene 293 valores distintos.\n",
+      "Variable 'Length Scaled' tiene 293 valores distintos.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for var, count in distinct_counts.items():\n",
+    "    print(f\"Variable '{var}' tiene {count} valores distintos.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+\n",
+      "|Airline|Flight|AirportFrom|AirportTo|DayOfWeek|Time|Length|Delay|      Length Scaled|Airline_index|AirportFrom_index|AirportTo_index|\n",
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+\n",
+      "|     CO|   269|        SFO|      IAH|        3|  15|   205|    1|0.31297709923664124|          9.0|              9.0|            5.0|\n",
+      "|     US|  1558|        PHX|      CLT|        3|  15|   222|    1|0.33893129770992364|          5.0|              6.0|           10.0|\n",
+      "|     AA|  2400|        LAX|      DFW|        3|  20|   165|    1|0.25190839694656486|          3.0|              4.0|            2.0|\n",
+      "|     AA|  2466|        SFO|      DFW|        3|  20|   195|    1|0.29770992366412213|          3.0|              9.0|            2.0|\n",
+      "|     AS|   108|        ANC|      SEA|        3|  30|   202|    0| 0.3083969465648855|         15.0|             72.0|           19.0|\n",
+      "|     CO|  1094|        LAX|      IAH|        3|  30|   181|    1|0.27633587786259545|          9.0|              4.0|            5.0|\n",
+      "|     DL|  1768|        LAX|      MSP|        3|  30|   220|    0|0.33587786259541985|          1.0|              4.0|           13.0|\n",
+      "|     DL|  2722|        PHX|      DTW|        3|  30|   228|    0| 0.3480916030534351|          1.0|              6.0|            7.0|\n",
+      "|     DL|  2606|        SFO|      MSP|        3|  35|   216|    1| 0.3297709923664122|          1.0|              9.0|           13.0|\n",
+      "|     AA|  2538|        LAS|      ORD|        3|  40|   200|    1| 0.3053435114503817|          3.0|              8.0|            1.0|\n",
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.ml.feature import StringIndexer\n",
+    "\n",
+    "columns_to_index = [\"Airline\",\"AirportFrom\",\"AirportTo\"]\n",
+    "\n",
+    "indexer = StringIndexer(inputCols = columns_to_index, outputCols = [\"Airline_index\",\"AirportFrom_index\",\"AirportTo_index\"])\n",
+    "\n",
+    "model = indexer.fit(df_new)\n",
+    "df_indexed = model.transform(df_new)\n",
+    "\n",
+    "df_indexed.show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+\n",
+      "|Airline|Flight|AirportFrom|AirportTo|DayOfWeek|Time|Length|Delay|      Length Scaled|Airline_index|AirportFrom_index|AirportTo_index| Airline_onehot|\n",
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+\n",
+      "|     CO|   269|        SFO|      IAH|        3|  15|   205|    1|0.31297709923664124|          9.0|              9.0|            5.0| (18,[9],[1.0])|\n",
+      "|     US|  1558|        PHX|      CLT|        3|  15|   222|    1|0.33893129770992364|          5.0|              6.0|           10.0| (18,[5],[1.0])|\n",
+      "|     AA|  2400|        LAX|      DFW|        3|  20|   165|    1|0.25190839694656486|          3.0|              4.0|            2.0| (18,[3],[1.0])|\n",
+      "|     AA|  2466|        SFO|      DFW|        3|  20|   195|    1|0.29770992366412213|          3.0|              9.0|            2.0| (18,[3],[1.0])|\n",
+      "|     AS|   108|        ANC|      SEA|        3|  30|   202|    0| 0.3083969465648855|         15.0|             72.0|           19.0|(18,[15],[1.0])|\n",
+      "|     CO|  1094|        LAX|      IAH|        3|  30|   181|    1|0.27633587786259545|          9.0|              4.0|            5.0| (18,[9],[1.0])|\n",
+      "|     DL|  1768|        LAX|      MSP|        3|  30|   220|    0|0.33587786259541985|          1.0|              4.0|           13.0| (18,[1],[1.0])|\n",
+      "|     DL|  2722|        PHX|      DTW|        3|  30|   228|    0| 0.3480916030534351|          1.0|              6.0|            7.0| (18,[1],[1.0])|\n",
+      "|     DL|  2606|        SFO|      MSP|        3|  35|   216|    1| 0.3297709923664122|          1.0|              9.0|           13.0| (18,[1],[1.0])|\n",
+      "|     AA|  2538|        LAS|      ORD|        3|  40|   200|    1| 0.3053435114503817|          3.0|              8.0|            1.0| (18,[3],[1.0])|\n",
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.ml.feature import OneHotEncoder\n",
+    "\n",
+    "# Aplicar OneHotEncoder a la variable indexada\n",
+    "encoder = OneHotEncoder(inputCols = [\"Airline_index\"], outputCols = [\"Airline_onehot\"], dropLast=False)\n",
+    "df_encoded = encoder.fit(df_indexed).transform(df_indexed)\n",
+    "\n",
+    "df_encoded.show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IllegalArgumentException",
+     "evalue": "Data type string of column Airline is not supported.\nData type string of column AirportFrom is not supported.\nData type string of column AirportTo is not supported.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIllegalArgumentException\u001b[0m                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 10\u001b[0m\n\u001b[0;32m      3\u001b[0m columns_to_normalize \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAirline\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFlight\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAirportFrom\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAirportTo\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      4\u001b[0m                         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDayOfWeek\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTime\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLength\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDelay\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      5\u001b[0m                         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLength Scaled\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAirline_index\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAirportFrom_index\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAirportTo_index\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      6\u001b[0m                         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAirline_onehot\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      8\u001b[0m assembler \u001b[38;5;241m=\u001b[39m VectorAssembler(inputCols \u001b[38;5;241m=\u001b[39m columns_to_normalize, outputCol \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfeatures\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m df_vector \u001b[38;5;241m=\u001b[39m \u001b[43massembler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_encoded\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m df_vector\u001b[38;5;241m.\u001b[39mshow(\u001b[38;5;241m10\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\MIS\\.conda\\envs\\pyspark\\lib\\site-packages\\pyspark\\ml\\base.py:262\u001b[0m, in \u001b[0;36mTransformer.transform\u001b[1;34m(self, dataset, params)\u001b[0m\n\u001b[0;32m    260\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcopy(params)\u001b[38;5;241m.\u001b[39m_transform(dataset)\n\u001b[0;32m    261\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 262\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_transform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    263\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    264\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mParams must be a param map but got \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mtype\u001b[39m(params))\n",
+      "File \u001b[1;32mc:\\Users\\MIS\\.conda\\envs\\pyspark\\lib\\site-packages\\pyspark\\ml\\wrapper.py:398\u001b[0m, in \u001b[0;36mJavaTransformer._transform\u001b[1;34m(self, dataset)\u001b[0m\n\u001b[0;32m    395\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_java_obj \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    397\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_transfer_params_to_java()\n\u001b[1;32m--> 398\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m DataFrame(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_java_obj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jdf\u001b[49m\u001b[43m)\u001b[49m, dataset\u001b[38;5;241m.\u001b[39msparkSession)\n",
+      "File \u001b[1;32mc:\\Users\\MIS\\.conda\\envs\\pyspark\\lib\\site-packages\\py4j\\java_gateway.py:1322\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[1;34m(self, *args)\u001b[0m\n\u001b[0;32m   1316\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[0;32m   1317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[0;32m   1318\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[0;32m   1319\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[0;32m   1321\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client\u001b[38;5;241m.\u001b[39msend_command(command)\n\u001b[1;32m-> 1322\u001b[0m return_value \u001b[38;5;241m=\u001b[39m \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1323\u001b[0m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1325\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[0;32m   1326\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(temp_arg, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_detach\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[1;32mc:\\Users\\MIS\\.conda\\envs\\pyspark\\lib\\site-packages\\pyspark\\errors\\exceptions\\captured.py:185\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[1;34m(*a, **kw)\u001b[0m\n\u001b[0;32m    181\u001b[0m converted \u001b[38;5;241m=\u001b[39m convert_exception(e\u001b[38;5;241m.\u001b[39mjava_exception)\n\u001b[0;32m    182\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[0;32m    183\u001b[0m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[0;32m    184\u001b[0m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[1;32m--> 185\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    186\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    187\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
+      "\u001b[1;31mIllegalArgumentException\u001b[0m: Data type string of column Airline is not supported.\nData type string of column AirportFrom is not supported.\nData type string of column AirportTo is not supported."
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "\n",
+    "columns_to_normalize = ['Airline','Flight','AirportFrom','AirportTo',\n",
+    "                        'DayOfWeek','Time','Length','Delay',\n",
+    "                        'Length Scaled','Airline_index','AirportFrom_index','AirportTo_index',\n",
+    "                        'Airline_onehot']\n",
+    "\n",
+    "assembler = VectorAssembler(inputCols = columns_to_normalize, outputCol = \"features\")\n",
+    "\n",
+    "df_vector = assembler.transform(df_encoded)\n",
+    "\n",
+    "df_vector.show(10)"
    ]
   }
  ],
