Added md comments

--- a/airline_delay.ipynb
+++ b/airline_delay.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predicción del Retraso de Vuelos\n",
+    "Yadier Betancourt Martínez\n",
+    "\n",
+    "Marlín Ramírez Rodríguez\n",
+    "\n",
+    "Para la realización de este trabajo estaremos usando la Base de casos Airlines Dataset to predict a delay, la cual puede ser accedida en Kaggle: https://www.kaggle.com/datasets/jimschacko/airlines-dataset-to-predict-a-delay"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,13 +20,29 @@
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "\n",
-    "# Crear una instancia de SparkSession:\n",
     "spark = SparkSession\\\n",
     "        .builder\\\n",
     "        .master(\"local[*]\")\\\n",
-    "        .appName(\"Delay\")\\\n",
+    "        .appName(\"Airline Delay\")\\\n",
     "        .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este conjunto de datos de aerolíneas contiene información sobre 539,383 vuelos. Cada vuelo está representado por 8 características diferentes que describen sus detalles.\n",
+    "\n",
+    "A continuación se muestra un resumen de las características:\n",
+    "\n",
+    "    Aerolínea: Nombre de la aerolínea que opera el vuelo (por ejemplo, \"American Airlines\", \"Alaska Airlines\").\n",
+    "    Vuelo: Identificador único del vuelo.\n",
+    "    Aeropuerto de Origen: Código IATA del aeropuerto de origen del vuelo.\n",
+    "    Aeropuerto de Destino: Código IATA del aeropuerto de destino del vuelo.\n",
+    "    Día de la Semana: Día de la semana en que se programó el vuelo.\n",
+    "    Tiempo tomado: Tiempo que tomó el vuelo.\n",
+    "    Largo: Distancia del vuelo.\n",
+    "    Retraso: si presentó retraso o no"
    ]
   },
   {
@@ -46,16 +74,23 @@
     }
    ],
    "source": [
-    "ruta = r'C:\\Estudio\\programeo\\IA\\BigDataOpt\\Airlines.csv'\n",
+    "path = r'C:\\Estudio\\programeo\\IA\\BigDataOpt\\Airlines.csv'\n",
     "\n",
-    "df = spark.read.csv(ruta, header=True, inferSchema=True)\n",
+    "df = spark.read.csv(path, header=True, inferSchema=True)\n",
     "\n",
     "df.show(10)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación podemos observar el esquema de nuestros datos, mostrándose las columnas y sus tipos de datos, así como la cantidad de casos de nuestro dataset:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -74,10 +109,28 @@
       " |-- Delay: integer (nullable = true)\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "539383"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.printSchema()"
+    "df.printSchema()\n",
+    "df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código nos permite analizar cuántos vuelos opera cada aerolínea en el conjunto de datos. Se agrupa por aerolínea, se cuenta el número de vuelos para cada aerolínea, se ordena por número de vuelos de menor a mayor y finalmente se muestra el resultado:"
    ]
   },
   {
@@ -120,6 +173,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código nos permite analizar cuántos vuelos tienen cada valor de retraso en el conjunto de datos. Se agrupa por valor de retraso, se cuenta el número de vuelos con cada valor de retraso, se ordena por número de vuelos de mayor a menor y finalmente se muestra el resultado:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -140,6 +200,13 @@
    ],
    "source": [
     "df.groupBy('Delay').count().sort('count',ascending=False).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código es útil para obtener una comprensión rápida de las características básicas de las variables numéricas en un conjunto de datos, para ello describiremos el Length y el Time:"
    ]
   },
   {
@@ -169,6 +236,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente código nos permite analizar la relación entre el retraso del vuelo y la aerolínea. La tabla resultante mostrará cuántos vuelos de cada aerolínea experimentaron cada valor de retraso:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -189,6 +263,13 @@
    ],
    "source": [
     "df.crosstab('Delay', 'Airline').sort('Delay_airline').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente código nos permite analizar la relación entre el retraso del vuelo y el aeropuerto de origen. La tabla resultante mostrará cuántos vuelos de cada aeropuerto de origen experimentaron cada valor de retraso:"
    ]
   },
   {
@@ -215,23 +296,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "539383"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.count()"
+    "El siguiente fragmento de código nos permite contar el número de vuelos que tomaron menos de 15 minutos:"
    ]
   },
   {
@@ -255,6 +323,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código nos permite contar el número de vuelos que no se retrasaron:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -272,6 +347,13 @@
    ],
    "source": [
     "df.filter(df.Delay==0).count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código nos permite calcular la duración promedio para cada vuelo en el conjunto de datos:"
    ]
   },
   {
@@ -317,12 +399,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EL siguiente código elimina la columna id, pues no posee ninguna utilidad para nuestro trabajo:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_new = df.drop('id')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente código crea una nueva columna llamada Length Scaled. La nueva columna contiene los valores de la columna original Length divididos por 655, siendo este número el máximo de Length, dato obtenido del `describe` visto anteriormente: "
    ]
   },
   {
@@ -369,6 +465,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código agrupa por aerolínea y calcula el tiempo de duración promedio para cada aerolínea, mostrando ordenadamente las aerolíneas en las que los vuelos demoran más a las que menos: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -408,6 +511,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente código analiza y visualiza a través de un gráfico de barras, la distribución de los vuelos por día de la semana en el conjunto de datos:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -434,13 +544,18 @@
     "\n",
     "plt.bar(delay_counts.index, delay_counts.values)\n",
     "\n",
-    "# Agregar etiquetas y título\n",
     "plt.xlabel('Día de la semana')\n",
     "plt.ylabel('Cantidad de vuelos')\n",
     "plt.title('Cantidad de vuelos por días de la semana')\n",
     "\n",
-    "# Mostrar la gráfica\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente código analiza y visualiza a través de un gráfico de barras, la distribución de los vuelos por aerolínea en el conjunto de datos:"
    ]
   },
   {
@@ -471,6 +586,13 @@
     "\n",
     "# Mostrar la gráfica\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente código genera un diagrama de cajas para visualizar la distribución del tiempo de duración de los vuelos. El diagrama muestra la mediana, los cuartiles y los valores atípicos de la columna Time:"
    ]
   },
   {
