--- a/airline_delay.ipynb
+++ b/airline_delay.ipynb
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "path = r'C:\\Estudio\\programeo\\IA\\BigDataOpt\\Airlines.csv'\n",
+    "path = r'C:\\Users\\MIS\\Desktop\\Estudio\\4\\RNA\\archive(1)\\Airlines.csv'\n",
     "\n",
     "df = spark.read.csv(path, header=True, inferSchema=True)\n",
     "\n",
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El siguiente fragmento de código nos permite analizar cuántos vuelos tienen cada valor de retraso en el conjunto de datos. Se agrupa por valor de retraso, se cuenta el número de vuelos con cada valor de retraso, se ordena por número de vuelos de mayor a menor y finalmente se muestra el resultado:"
+    "El siguiente fragmento de código nos permite analizar cuántos retrasos y cuantos vuelos a tiempo hay en el conjunto de datos, se ordena por número de vuelos de mayor a menor:"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El siguiente código nos permite analizar la relación entre el retraso del vuelo y el aeropuerto de origen. La tabla resultante mostrará cuántos vuelos de cada aeropuerto de origen experimentaron cada valor de retraso:"
+    "El siguiente código nos permite analizar la relación entre el retraso del vuelo y el aeropuerto de origen. La tabla resultante mostrará cuántos vuelos de cada aeropuerto de origen, experimentaron cada valor de retraso:"
    ]
   },
   {
@@ -622,6 +622,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código itera sobre todas las columnas y, para cada una, imprime el nombre de la columna y el número de valores nulos en esa columna:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -648,17 +655,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "distinct_counts = {var: df_new.select('AirportTo').distinct().count() for var in df_new.columns}"
+    "El siguiente fragmento de código crea un diccionario que contiene el número de valores distintos para cada columna:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -678,13 +683,22 @@
     }
    ],
    "source": [
+    "distinct_counts = {var: df_new.select('AirportTo').distinct().count() for var in df_new.columns}\n",
+    "\n",
     "for var, count in distinct_counts.items():\n",
     "    print(f\"Variable '{var}' tiene {count} valores distintos.\")\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código utiliza el transformador StringIndexer de PySpark para convertir columnas categóricas representadas como cadenas en índices numéricos:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -724,8 +738,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código utiliza el transformador OneHotEncoder de PySpark para convertir una columna de índices numéricos en una representación de vector one-hot:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -762,8 +783,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código utiliza el transformador VectorAssembler de PySpark para combinar varias columnas en una única columna de características usando un vector:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -773,16 +801,16 @@
       "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+--------------------+\n",
       "|Airline|Flight|AirportFrom|AirportTo|DayOfWeek|Time|Length|Delay|      Length Scaled|Airline_index|AirportFrom_index|AirportTo_index| Airline_onehot|            features|\n",
       "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+--------------------+\n",
-      "|     CO|   269|        SFO|      IAH|        3|  15|   205|    1|0.31297709923664124|          9.0|              9.0|            5.0| (18,[9],[1.0])|(27,[0,1,2,3,4,5,...|\n",
-      "|     US|  1558|        PHX|      CLT|        3|  15|   222|    1|0.33893129770992364|          5.0|              6.0|           10.0| (18,[5],[1.0])|(27,[0,1,2,3,4,5,...|\n",
-      "|     AA|  2400|        LAX|      DFW|        3|  20|   165|    1|0.25190839694656486|          3.0|              4.0|            2.0| (18,[3],[1.0])|(27,[0,1,2,3,4,5,...|\n",
-      "|     AA|  2466|        SFO|      DFW|        3|  20|   195|    1|0.29770992366412213|          3.0|              9.0|            2.0| (18,[3],[1.0])|(27,[0,1,2,3,4,5,...|\n",
-      "|     AS|   108|        ANC|      SEA|        3|  30|   202|    0| 0.3083969465648855|         15.0|             72.0|           19.0|(18,[15],[1.0])|(27,[0,1,2,3,5,6,...|\n",
-      "|     CO|  1094|        LAX|      IAH|        3|  30|   181|    1|0.27633587786259545|          9.0|              4.0|            5.0| (18,[9],[1.0])|(27,[0,1,2,3,4,5,...|\n",
-      "|     DL|  1768|        LAX|      MSP|        3|  30|   220|    0|0.33587786259541985|          1.0|              4.0|           13.0| (18,[1],[1.0])|(27,[0,1,2,3,5,6,...|\n",
-      "|     DL|  2722|        PHX|      DTW|        3|  30|   228|    0| 0.3480916030534351|          1.0|              6.0|            7.0| (18,[1],[1.0])|(27,[0,1,2,3,5,6,...|\n",
-      "|     DL|  2606|        SFO|      MSP|        3|  35|   216|    1| 0.3297709923664122|          1.0|              9.0|           13.0| (18,[1],[1.0])|(27,[0,1,2,3,4,5,...|\n",
-      "|     AA|  2538|        LAS|      ORD|        3|  40|   200|    1| 0.3053435114503817|          3.0|              8.0|            1.0| (18,[3],[1.0])|(27,[0,1,2,3,4,5,...|\n",
+      "|     CO|   269|        SFO|      IAH|        3|  15|   205|    1|0.31297709923664124|          9.0|              9.0|            5.0| (18,[9],[1.0])|[269.0,3.0,15.0,2...|\n",
+      "|     US|  1558|        PHX|      CLT|        3|  15|   222|    1|0.33893129770992364|          5.0|              6.0|           10.0| (18,[5],[1.0])|[1558.0,3.0,15.0,...|\n",
+      "|     AA|  2400|        LAX|      DFW|        3|  20|   165|    1|0.25190839694656486|          3.0|              4.0|            2.0| (18,[3],[1.0])|[2400.0,3.0,20.0,...|\n",
+      "|     AA|  2466|        SFO|      DFW|        3|  20|   195|    1|0.29770992366412213|          3.0|              9.0|            2.0| (18,[3],[1.0])|[2466.0,3.0,20.0,...|\n",
+      "|     AS|   108|        ANC|      SEA|        3|  30|   202|    0| 0.3083969465648855|         15.0|             72.0|           19.0|(18,[15],[1.0])|[108.0,3.0,30.0,2...|\n",
+      "|     CO|  1094|        LAX|      IAH|        3|  30|   181|    1|0.27633587786259545|          9.0|              4.0|            5.0| (18,[9],[1.0])|[1094.0,3.0,30.0,...|\n",
+      "|     DL|  1768|        LAX|      MSP|        3|  30|   220|    0|0.33587786259541985|          1.0|              4.0|           13.0| (18,[1],[1.0])|[1768.0,3.0,30.0,...|\n",
+      "|     DL|  2722|        PHX|      DTW|        3|  30|   228|    0| 0.3480916030534351|          1.0|              6.0|            7.0| (18,[1],[1.0])|[2722.0,3.0,30.0,...|\n",
+      "|     DL|  2606|        SFO|      MSP|        3|  35|   216|    1| 0.3297709923664122|          1.0|              9.0|           13.0| (18,[1],[1.0])|[2606.0,3.0,35.0,...|\n",
+      "|     AA|  2538|        LAS|      ORD|        3|  40|   200|    1| 0.3053435114503817|          3.0|              8.0|            1.0| (18,[3],[1.0])|[2538.0,3.0,40.0,...|\n",
       "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+--------------------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -793,14 +821,113 @@
     "from pyspark.ml.feature import VectorAssembler\n",
     "\n",
     "columns_to_normalize = ['Flight', 'DayOfWeek','Time','Length','Delay',\n",
-    "                        'Length Scaled','Airline_index','AirportFrom_index','AirportTo_index',\n",
-    "                        'Airline_onehot']\n",
+    "                       'Length Scaled','Airline_index','AirportFrom_index','AirportTo_index']\n",
     "\n",
     "assembler = VectorAssembler(inputCols = columns_to_normalize, outputCol = \"features\")\n",
     "\n",
     "df_vector = assembler.transform(df_encoded)\n",
     "\n",
     "df_vector.show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código utiliza el transformador MinMaxScaler de PySpark para escalar los valores de una columna de características a un rango entre 0 y 1:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+--------------------+--------------------+\n",
+      "|Airline|Flight|AirportFrom|AirportTo|DayOfWeek|Time|Length|Delay|      Length Scaled|Airline_index|AirportFrom_index|AirportTo_index| Airline_onehot|            features| normalized_features|\n",
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+--------------------+--------------------+\n",
+      "|     CO|   269|        SFO|      IAH|        3|  15|   205|    1|0.31297709923664124|          9.0|              9.0|            5.0| (18,[9],[1.0])|[269.0,3.0,15.0,2...|[0.03430180468450...|\n",
+      "|     US|  1558|        PHX|      CLT|        3|  15|   222|    1|0.33893129770992364|          5.0|              6.0|           10.0| (18,[5],[1.0])|[1558.0,3.0,15.0,...|[0.19928324587226...|\n",
+      "|     AA|  2400|        LAX|      DFW|        3|  20|   165|    1|0.25190839694656486|          3.0|              4.0|            2.0| (18,[3],[1.0])|[2400.0,3.0,20.0,...|[0.30705234864968...|\n",
+      "|     AA|  2466|        SFO|      DFW|        3|  20|   195|    1|0.29770992366412213|          3.0|              9.0|            2.0| (18,[3],[1.0])|[2466.0,3.0,20.0,...|[0.31549980801228...|\n",
+      "|     AS|   108|        ANC|      SEA|        3|  30|   202|    0| 0.3083969465648855|         15.0|             72.0|           19.0|(18,[15],[1.0])|[108.0,3.0,30.0,2...|[0.01369512351209...|\n",
+      "|     CO|  1094|        LAX|      IAH|        3|  30|   181|    1|0.27633587786259545|          9.0|              4.0|            5.0| (18,[9],[1.0])|[1094.0,3.0,30.0,...|[0.13989504671701...|\n",
+      "|     DL|  1768|        LAX|      MSP|        3|  30|   220|    0|0.33587786259541985|          1.0|              4.0|           13.0| (18,[1],[1.0])|[1768.0,3.0,30.0,...|[0.22616152566235...|\n",
+      "|     DL|  2722|        PHX|      DTW|        3|  30|   228|    0| 0.3480916030534351|          1.0|              6.0|            7.0| (18,[1],[1.0])|[2722.0,3.0,30.0,...|[0.34826571099449...|\n",
+      "|     DL|  2606|        SFO|      MSP|        3|  35|   216|    1| 0.3297709923664122|          1.0|              9.0|           13.0| (18,[1],[1.0])|[2606.0,3.0,35.0,...|[0.33341866120568...|\n",
+      "|     AA|  2538|        LAS|      ORD|        3|  40|   200|    1| 0.3053435114503817|          3.0|              8.0|            1.0| (18,[3],[1.0])|[2538.0,3.0,40.0,...|[0.32471521822603...|\n",
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+--------------------+--------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.ml.feature import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler(inputCol = \"features\", outputCol = \"normalized_features\")\n",
+    "\n",
+    "scaler_model = scaler.fit(df_vector)\n",
+    "scaled_data = scaler_model.transform(df_vector)\n",
+    "\n",
+    "scaled_data.show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente fragmento de código crea y ejecuta una pipeline de aprendizaje automático de PySpark que combina múltiples transformadores para preprocesar datos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+--------------------+--------------------+\n",
+      "|Airline|Flight|AirportFrom|AirportTo|DayOfWeek|Time|Length|Delay|      Length Scaled|Airline_index|AirportFrom_index|AirportTo_index| Airline_onehot|            features| normalized_features|\n",
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+--------------------+--------------------+\n",
+      "|     CO|   269|        SFO|      IAH|        3|  15|   205|    1|0.31297709923664124|          9.0|              9.0|            5.0| (18,[9],[1.0])|(27,[0,1,2,3,4,5,...|(27,[0,1,2,3,4,5,...|\n",
+      "|     US|  1558|        PHX|      CLT|        3|  15|   222|    1|0.33893129770992364|          5.0|              6.0|           10.0| (18,[5],[1.0])|(27,[0,1,2,3,4,5,...|(27,[0,1,2,3,4,5,...|\n",
+      "|     AA|  2400|        LAX|      DFW|        3|  20|   165|    1|0.25190839694656486|          3.0|              4.0|            2.0| (18,[3],[1.0])|(27,[0,1,2,3,4,5,...|(27,[0,1,2,3,4,5,...|\n",
+      "|     AA|  2466|        SFO|      DFW|        3|  20|   195|    1|0.29770992366412213|          3.0|              9.0|            2.0| (18,[3],[1.0])|(27,[0,1,2,3,4,5,...|(27,[0,1,2,3,4,5,...|\n",
+      "|     AS|   108|        ANC|      SEA|        3|  30|   202|    0| 0.3083969465648855|         15.0|             72.0|           19.0|(18,[15],[1.0])|(27,[0,1,2,3,5,6,...|(27,[0,1,2,3,5,6,...|\n",
+      "|     CO|  1094|        LAX|      IAH|        3|  30|   181|    1|0.27633587786259545|          9.0|              4.0|            5.0| (18,[9],[1.0])|(27,[0,1,2,3,4,5,...|(27,[0,1,2,3,4,5,...|\n",
+      "|     DL|  1768|        LAX|      MSP|        3|  30|   220|    0|0.33587786259541985|          1.0|              4.0|           13.0| (18,[1],[1.0])|(27,[0,1,2,3,5,6,...|(27,[0,1,2,3,5,6,...|\n",
+      "|     DL|  2722|        PHX|      DTW|        3|  30|   228|    0| 0.3480916030534351|          1.0|              6.0|            7.0| (18,[1],[1.0])|(27,[0,1,2,3,5,6,...|(27,[0,1,2,3,5,6,...|\n",
+      "|     DL|  2606|        SFO|      MSP|        3|  35|   216|    1| 0.3297709923664122|          1.0|              9.0|           13.0| (18,[1],[1.0])|(27,[0,1,2,3,4,5,...|(27,[0,1,2,3,4,5,...|\n",
+      "|     AA|  2538|        LAS|      ORD|        3|  40|   200|    1| 0.3053435114503817|          3.0|              8.0|            1.0| (18,[3],[1.0])|(27,[0,1,2,3,4,5,...|(27,[0,1,2,3,4,5,...|\n",
+      "+-------+------+-----------+---------+---------+----+------+-----+-------------------+-------------+-----------------+---------------+---------------+--------------------+--------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.ml import Pipeline\n",
+    "\n",
+    "pipeline1 = Pipeline(stages=[indexer, encoder, assembler, scaler])\n",
+    "\n",
+    "df = pipeline1.fit(df_new).transform(df_new)\n",
+    "\n",
+    "df.show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
    ]
   }
  ],
